bk_ida/bzip2ida/g2/compress
/data/output_dir/patch/bzip2/ida/gcc/O2/bzip2-gcc-O2/compress/src/bzip2.c:1810:6: error: use of undeclared identifier 'BZ2_crc32Table'
if ( BZ2_crc32Table == ( UInt32 *)++v3 ) 
     ^
1 error generated.
make: *** [/data/output_dir/patch/bzip2/ida/gcc/O2/bzip2-gcc-O2/compress/src/obj/bzip2.o] Error 1
